--- a/calibration_multikinect.yml
+++ b/calibration_multikinect.yml
@@ -3,7 +3,7 @@ rgb_intrinsics: !!opencv-matrix
    rows: 3
    cols: 3
    dt: d
-   data: [ 6.3325455446889180e+02, 0., 320., 0., 6.3325455446889180e+02,
+   data: [ 6.3952480325858539e+02, 0., 320., 0., 6.3952480325858539e+02,
        240., 0., 0., 1. ]
 rgb_distortion: !!opencv-matrix
    rows: 1
@@ -14,7 +14,7 @@ depth_intrinsics: !!opencv-matrix
    rows: 3
    cols: 3
    dt: d
-   data: [ 6.3325455446889180e+02, 0., 320., 0., 6.3325455446889180e+02,
+   data: [ 6.3952480325858539e+02, 0., 320., 0., 6.3952480325858539e+02,
        240., 0., 0., 1. ]
 depth_distortion: !!opencv-matrix
    rows: 1
@@ -35,17 +35,17 @@ R_extrinsics: !!opencv-matrix
    rows: 3
    cols: 3
    dt: d
-   data: [ 8.7131639887772716e-01, -2.2440864788538011e-02,
-       4.9020826251124316e-01, -2.8813157407091630e-02,
-       9.9489079068775110e-01, 9.6758031010017523e-02,
-       -4.8987501978258041e-01, -9.8431306972141266e-02,
-       8.6621806884916253e-01 ]
+   data: [ 6.4262518510416322e-01, -1.6083226740943320e-02,
+       7.6601188064379211e-01, -3.3878777815949987e-02,
+       9.9820530822735365e-01, 4.9380067238018459e-02,
+       -7.6543131624172345e-01, -5.7684421157996678e-02,
+       6.4092699090624161e-01 ]
 T_extrinsics: !!opencv-matrix
    rows: 3
    cols: 1
    dt: d
-   data: [ 8.7712166554885496e-01, 1.0606030518292689e-01,
-       3.8009793417429494e-02 ]
+   data: [ 1.1941645244091501e+00, 7.2647675542534124e-02,
+       -4.1169466413658151e-01 ]
 rgb_size: !!opencv-matrix
    rows: 1
    cols: 2
